# database_lab3

./: .gitignore  README.md  docker-compose.yaml
alembic/: .dockerignore  README.md  alembic.ini  linked.Dockerfile  requirements.db_drivers.txt  requirements.model.txt  requirements.txt  unlinked.Dockerfile
alembic/migrations/: env.py  script.py.mako
alembic/versions/: 5dbe4bf358a5_model_0_3_0.py  9b869fad9542_model_0_2_0.py  a572d893fb6c_model_0_1_0.py
cli/: .dockerignore  Dockerfile  README.md  dist.Dockerfile  pyproject.toml
cli/src/wwweather/cli/: __init__.py  _config.py  _context.py  _run.py
cli/src/wwweather/cli/_arguments/: __init__.py  _csv_opts.py  _db_creds.py  _search_params.py
cli/src/wwweather/cli/_helpers/: __init__.py  _abc_args_formatter.py  _args_formatter.py  _command.py  _commands_mapper.py
cli/src/wwweather/cli/commands/: __init__.py  _export.py  _import.py  _search.py
cli/src/wwweather/cli/display/: __init__.py  _abc_records_formatter.py  _records_formatter.py
pkgs/core/: README.md  dist.Dockerfile  pyproject.toml
pkgs/core/src/wwweather/data/io/: __init__.py  _abc_dumber.py  _abc_loader.py
pkgs/core/src/wwweather/data/model/: __init__.py  _data_air_quality.py  _record.py
pkgs/core/src/wwweather/data/storage/: __init__.py  _abc_repository_manager.py
pkgs/core/src/wwweather/data/utils/: __init__.py
pkgs/data-csv/: README.md  dist.Dockerfile  pyproject.toml
pkgs/data-csv/src/wwweather/data/csv/: __init__.py  _csv_dumper.py  (+2 more)
pkgs/data-sqlalchemy/: README.md  dist.Dockerfile  dist.Dockerfile.dockerignore  pyproject.toml
(+33 files in other folders)
