[project]

# Project metadata

# -- General info
name = "WWWeather.CLI"
version = "0.2.0"
description = """
WWWeather application simple commandline interface package:
provides such basic functionality as running weather records import/export
and search functionality invocation.
"""

# -- README file
readme = "README.md"

# -- Required Python version
requires-python = ">=3.10"

# -- Required pip packages
dependencies = [
    "tabulate==0.9.0",

    "SQLAlchemy==2.0.29",

    "WWWeather.Core==0.2.0",
    "WWWeather.Data-CSV==0.2.0",
    "WWWeather.Data-SQLAlchemy==0.2.0"
]


[project.scripts]

# Project scripts

# -- Primary cli entrypoint
wwweather-cli = "wwweather.cli:run_cli"


[build-system]

# Project build backend

requires = ["setuptools >= 69.0.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]

# Project packages & sources

packages = {find = {where = ["src"], namespaces = true}}
